Remove second location aka power_feed_b from machines.
